--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "4.3.1",
     "classnames": "2.2.6",
     "headroom.js": "0.11.0",
+    "http-proxy-middleware": "^1.0.5",
     "moment": "2.24.0",
     "node-sass": "4.13.1",
     "nouislider": "14.1.1",
