--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-dom": "16.12.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.3",
     "reactstrap": "8.4.1"
   },
   "devDependencies": {
